1/1.10/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-0-svc
spec:
  type: ClusterIP
  selector:
    app: app-0
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
